<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="UDT_RackFeederHmi_RD" Id="{ec778b85-e8f4-4cae-9159-ac9ddd341137}">
    <Declaration><![CDATA[TYPE UDT_RackFeederHmi_RD :
STRUCT
input : UDT_RackFeederInput_RD; //
output : UDT_RackFeederOutput_RD; //
ready : BOOL; // 准备就绪
alarming : BOOL; // 报警中
feedHmi : BOOL; // 放料马达HMI
feedManual : BOOL; // 放料马达Manual
feedForbidIcon : BOOL; // 放料马达禁止图标
rollHmi : BOOL; // 卷纸马达HMI
rollManual : BOOL; // 卷纸马达Manual
rollForbidIcon : BOOL; // 卷纸马达禁止图标
display : BOOL; // 显示
tail : BOOL; // 尾料模式，缺料时不提示
breakLabel : String[10]; // 纸带断裂检测标签
scatterLabel : String[10]; // 散料检测标签
fullLabel : String[10]; // 满料检测标签
number : Int; //编号
rollLimit : Int; // 卷纸马达10秒内转圈数上限
startTime : UDINT; // 启动延时
stopTime : UDINT; // 停止延时
timeout : UDINT; // 放料超时延时

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>