<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="UDT_RackFeederInput_RD" Id="{7bbe3fa9-04ec-40a5-aa6f-98647de16b60}">
    <Declaration><![CDATA[TYPE UDT_RackFeederInput_RD :
STRUCT
full : BOOL; // 满料检测
break : BOOL; // 纸带断裂检测
scatter : BOOL; // 散料检测
feedButton : BOOL; // 放料按钮

END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>